--- a/CaheeFolder/css/style.css
+++ b/CaheeFolder/css/style.css
@@ -115,8 +115,10 @@ body {
 
 .button--blog {
   background-color: #ff6033;
-  margin-left: 750px;
-  margin-top: 30px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  margin-top: 20px;
 }
 
 .button--primary {
@@ -341,16 +343,19 @@ body {
   font-size: xxx-large;
   margin-left: 90px;
   background-color: #ffffff;
- }
-  .section__button--name {
-    width: 231px;
-    margin-left: 90px;
-    margin-top: 18px;
 }
-  .section__button--border {
-    border-left-color:#9d9d9d;
-    border-bottom: #ffffff;
-    border-top: #ffffff;
-    border-right: #ffffff;
+
+.section__button--name {
+  width: 231px;
+  margin-left: 90px;
+  margin-top: 18px;
 }
+
+.section__button--border {
+  border-left-color: #9d9d9d;
+  border-bottom: #ffffff;
+  border-top: #ffffff;
+  border-right: #ffffff;
+}
+
 /* Services style end */
