--- a/CaheeFolder/css/style.css
+++ b/CaheeFolder/css/style.css
@@ -8,6 +8,7 @@ body {
 .section--blog {
   padding: 100px 0 120px;
   background-color: #b07cf7;
+  width: 100%;
 }
 
 .section__title--blog {
@@ -130,8 +131,8 @@ body {
 /* Section style start */
 
 .section__title {
-  line-height: 0.42;
   margin-bottom: 34px;
+  line-height: 0.8;
 }
 
 .section__title--primary {
@@ -201,6 +202,7 @@ body {
   position: relative;
 }
 
+
 .nav__link:hover {
   color: #262626;
 }
@@ -227,6 +229,7 @@ body {
 .section__contacts {
   padding: 100px 0 120px;
   background: url(../images/contact-bg.png) no-repeat center/cover;
+  width: 100%;
 }
 
 .section__title--dark {
@@ -249,10 +252,10 @@ body {
 
 
 .section__form--style {
-  width: 500px;
+  width: 85%;
   height: 50px;
-  margin: 15px 170px 15px 0;
-  padding: 15px 378px 0 15px;
+  margin: 15px 60px 15px 0;
+  padding: 0px 233px -1px 15px;
   background-color: #00c4c4;
   opacity: 0.5;
   font-size: 15px;
@@ -261,19 +264,16 @@ body {
 }
 
 .section__form--stylebig {
-  height: 150px;
-  margin: 15px 170px 15px 0;
-  padding: 20px 383px 216px 20px;
+  width: 85%;
+  height: 13vh;
   overflow: hidden;
-
 }
 
 .contacts__title {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: -250px;
-  margin-left: 100px;
+  margin-left: 25%;
 }
 
 .contacts__title--style {
@@ -281,18 +281,15 @@ body {
 }
 
 .footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  background-color: #262626;
+  text-align: center;
+}
+
+.footer__style {
   background-color: #262626;
   color: #b9b9b9;
   padding-top: 13px;
-  padding-left: 200px;
-  padding-right: 180px;
-}
-
-.footer__style--logo {
-  padding-bottom: 20px;
+  width: 100%;
 }
 
 .colortext {
@@ -306,56 +303,37 @@ body {
 
 .section__services {
   background-color: #70bfff;
-  height: 790px;
-  padding: 100px 164px 151px 265px;
-}
-
-.section__button {
-  display: flex;
-  flex-direction: column;
-  width: 500px;
-  height: 100px;
+  padding-top: 160px;
 }
 
 .section__title--services {
   background: url(../images/tomato.png) no-repeat;
-  width: 600px;
-  height: 527px;
-  margin: -20px 1px 12px 100px;
-  padding-top: 220px;
-}
+  width: 100%;
+  height: 66vh;
+  padding: 160px 0 20px 2px;
+  margin-left: 20%;
+  }
 
-.section__button--style {
-  display: flex;
-  flex-direction: row;
-  background-color: #ffffff;
-  font-size: 20px;
-  font-weight: bold;
-  box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.5);
-  margin: 10px;
+.table__style {
+  background-color: white;
+  width: 100%;
+  font-size: x-large;
   text-align: center;
-  padding-top: 10px;
 }
 
-.section__button--icon {
-  width: 90px;
-  margin-top: -10px;
-  font-size: xxx-large;
-  margin-left: 90px;
-  background-color: #ffffff;
+.table__style--icon {
+  height: 12vh;
+  width: 100%;
+  font-size: 200%;
+  border-left: 2px solid gray;
+  background-color: #fff;
+  padding: 20px 35px;
 }
 
-.section__button--name {
-  width: 231px;
-  margin-left: 90px;
-  margin-top: 18px;
-}
-
-.section__button--border {
-  border-left-color: #9d9d9d;
-  border-bottom: #ffffff;
-  border-top: #ffffff;
-  border-right: #ffffff;
+.section__table {
+  margin-bottom: 10px;
+  border-collapse: unset;
+  border-spacing: 0px 15px;
 }
 
 /* Services style end */
