--- a/CaheeFolder/css/subscribe.css
+++ b/CaheeFolder/css/subscribe.css
@@ -1,7 +1,7 @@
 .section--subscribe {
   background: url("../images/subscribe.png") no-repeat;
-  padding: 98px 50px 161px 115px;
-  margin-left: 90px;
+  padding: 170px 137px 197px 100px;
+  background-size: cover;
 }
 
 .title {
